bloglist horizontal alignment fixed

--- a/src/components/bloglist/BlogList.css
+++ b/src/components/bloglist/BlogList.css
@@ -7,7 +7,7 @@
   max-width: 1200px;
   min-height: 100vh;
   box-sizing: border-box;
-  place-items: center;
+  justify-items: center;
 }
 
 /* MEDIA QUERIES  */
